# bug-cause-inference-game

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
devlog/: 2026-06-28.md  2026-06-29.md  2026-07-02.md  2026-07-04.md  2026-07-05.md  2026-07-13.md
docs/: implementation_status.md  p1a_evaluation_notes.md  p1c0_specification.md  p1c1_result_interpretation.md  p1c2_adversarial_bucket_selection_spec.md  p1c4_bounded_observation_cost_stress_spec.md  p1c6_cost_profile_bucket_selection_spec.md  p1c8_bounded_observation_dropout_delay_spec.md  p1c_adversarial_planning.md  p1c_result_interpretation.md  p2a_result_interpretation.md  p2b_result_interpretation.md  p2c_result_interpretation.md  p2d_result_interpretation.md  p2e_result_interpretation.md  p2f_result_interpretation.md  p2g_result_interpretation.md  p2h_result_interpretation.md  release_readiness.md  test_operations.md
examples/cases/: synthetic_cases.json
examples/p1b/reports/: p1b_evaluation_summary.json  p1b_evaluation_summary.md  p1b_report_P1B-BUG-001.json  p1b_report_P1B-BUG-001.md
examples/p1b/variants/: p1b_variants.json  p1b_variants.md
examples/reports/: analysis_summary.json  analysis_summary.md  decision_report_BUG-0001.json  decision_report_BUG-0001.md  evaluation_summary.json  evaluation_summary.md
scripts/: check_release_artifacts.py
src/bug_cause_inference/: __init__.py  analysis.py  bayes.py  cli.py  evaluation.py  likelihoods.py  models.py  policies.py  reports.py  synthetic_cases.py
src/bug_cause_inference/p1b/: __init__.py  actions.py  dataset.py  evaluation.py  execution.py  models.py  policies.py  real_diff.py  reports.py
src/bug_cause_inference/p1c/: __init__.py  evaluation.py  labels.py
src/bug_cause_inference/p1d/: __init__.py  evaluation.py  p1d2_evaluation.py  p1d3a_evaluation.py  p1d3b_evaluation.py
src/bug_cause_inference/p2a/: __init__.py  adequacy.py  candidate_authoring.py  candidate_oracles.py  candidates.py  compatibility.py  evaluation.py  execution.py  freeze.py  freeze_realization.py  (+1 more)
tests/: conftest.py  test_analysis.py  test_bayes.py  test_cli.py  test_evaluation.py  test_likelihoods.py  test_p1b_actions.py  test_p1b_cli.py  test_p1b_dataset.py  test_p1b_evaluation.py  test_p1b_policies.py  test_p1b_real_diff.py  test_p1c_cli.py  test_p1c_evaluation.py  test_p1c_labels.py  test_p1d1_cli.py  test_p1d1_evaluation.py  test_p1d2_cli.py  test_p1d2_evaluation.py  test_p1d3a_cli.py  test_p1d3a_evaluation.py  test_p1d3b_cli.py  test_p1d3b_evaluation.py  test_p2a_adequacy.py  test_p2a_candidate_oracles.py  test_p2a_candidates.py  test_p2a_compatibility.py  test_p2a_evaluation.py  test_p2a_execution.py  test_p2a_freeze.py  test_p2a_freeze_realization.py  test_p2a_reports.py  test_p2b_reports.py  test_p2b_solvability_ceiling.py  test_p2c_reports.py  test_p2c_trajectory_audit.py  test_p2d_reports.py  test_p2d_stop_relaxation_audit.py  test_p2e_continuation_audit.py  test_p2e_reports.py  (+10 more)
(+118 files in other folders)
